working on responsive views

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             "name": "Dennis Dickson | Frontend Designer and Developer.",
             "description": "Dennis Dickson | Frontend Designer and Developer.",
             "@type": "WebSite",
-            "url": "https://monetran.com/",
+            "url": "https://psybuglite.github.io/website",
             "headline": "Home",
             "@context": "http://schema.org"
         }
@@ -51,7 +51,7 @@
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a href="" class="tx-c d-blk p-1 py-2h co-white">
+                            <a class="tx-c d-blk p-1 py-2h co-white">
                                 About
                             </a>
                         </li>
@@ -78,10 +78,10 @@
         <div class="d-flx j-c-sb al-i-c wrapper-x py-1">
 
             <div class="logo-area">
-                    <p class="">
-                        Tonye Dickson
-                    </p>
-                </div>
+                <p class="">
+                    Tonye Dickson
+                </p>
+            </div>
             <div class="nav-menu flex-hide-mediumup" onclick="showmenu(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
@@ -133,11 +133,6 @@
                                 <p class="co-white hometext mb-h">
                                     Shortly after I began writing articles here and have continued writing articles
                                 </p>
-                                <div class="d-flx j-c-fe">
-                                    <button class="bg-primary px-1h py-hh co-white cardshadow">
-                                        View Resume
-                                    </button>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -155,8 +150,11 @@
                             from Lagos, Nigeria
                         </p>
                         <div class="d-flx py-1 mobile-center">
-                            <button class="bg-primary d-ibl px-3 py-hh co-white bottomshadow">
+                            <button class="bg-primary d-ibl thin-primary-border px-3 py-hh co-white">
                                 Hire Me
+                            </button>
+                            <button class="bg-clear thin-primary-border px-1h suffix is-even-wider py-hh co-richblack">
+                                View Resume
                             </button>
                         </div>
 
