done with responsive menu and view

--- a/index.html
+++ b/index.html
@@ -82,42 +82,54 @@
                     Tonye Dickson
                 </p>
             </div>
-            <div class="nav-menu change flex-hide-mediumup" onclick="showmenu(this)">
+            <div class="nav-menu pos-r flex-hide-mediumup" onclick="showmenu(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
                 <div class="bar3"></div>
+                <div class="bars">
+                    <div class="d-bar-1"></div>
+                    <div class="d-bar-2"></div>
+                    <div class="d-bar-3"></div>
+                </div>
             </div>
         </div>
     </header>
-    <!-- <div class="mobile-nav pos-a fixed-to-top bg-home-mobile">
-        <ul class="sub-ul none tx-c">
-           <li class="prefix px-1 sublist-class">
-                <a class="d-blk py-1 co-richblack">
-                    Dashboard
-                </a>
-            </li>
-            <li class="prefix px-1 sublist-class">
-                <a href="wallets.html" class="d-blk py-1 co-richblack">
-                    Wallets
-                </a>
-            </li>
-            <li class="prefix px-1 sublist-class">
-                <a href="transactions.html" class="d-blk py-1 co-richblack">
-                    Transactions
-                </a>
-            </li>
-            <li class="prefix px-1">
-                <a href="top-up.html" class="d-blk py-1 co-richblack">
-                    Top-Up
-                </a>
-            </li>
-            <li class="prefix px-1">
-                <a href="withdrawals.html" class="d-blk py-1 co-richblack">
-                    Withdrawals
-                </a>
-            </li>
-        </ul>
-    </div> -->
+
+
+    <div class="mobile-nav wrapper-x pos-a fixed-to-top min-height-60-vh">
+        <div class="h-100 bg-white">
+            <ul class="sub-ul none tx-c">
+               <li class="prefix px-1 sublist-class">
+                    <a class="d-blk py-1 co-richblack">
+                        Home
+                    </a>
+                </li>
+                <li class="prefix px-1 sublist-class">
+                    <a href="wallets.html" class="d-blk py-1 co-richblack">
+                        About
+                    </a>
+                </li>
+                <li class="prefix px-1 sublist-class">
+                    <a href="transactions.html" class="d-blk py-1 co-richblack">
+                        Work
+                    </a>
+                </li>
+                <li class="prefix px-1">
+                    <a href="top-up.html" class="d-blk py-1 co-richblack">
+                        Writing
+                    </a>
+                </li>
+                <li class="prefix px-1">
+                    <a href="withdrawals.html" class="d-blk py-1 co-richblack">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+            <p class="p-1 co-richblack">
+                This website was built with <a href="http://gatsbyjs.org" class="co-primary fw-bold">Gatsby.js</a> and is currently hosted on <a href="http://netlify.com" class="co-primary fw-bold">Netlify</a>. The source code and other assets can be found on <a href="http://github.com" class="co-primary fw-bold">Github</a>.
+            </p>
+        </div>
+    </div>
 
 
     <main navcontrol>
