modified meta tags

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link href="css/style.css" rel="stylesheet" />
 
     <title>Dennis Dickson | Frontend Designer and Developer.</title>
-    <meta property="og:title" content="Home" />
+    <meta property="og:title" content="Dennis Dickson" />
     <meta property="og:locale" content="en_US" />
-    <meta name="description" content="monetran is a ready, secure and proven solution." />
-    <meta property="og:description" content="monetran is a ready, secure and proven solution." />
-    <link rel="canonical" href="https://monetran.com/" />
-    <meta property="og:url" content="https://monetran.com/" />
-    <meta property="og:site_name" content="monetran" />
+    <meta name="description" content="Dennis Dickson | Frontend Designer and Developer.." />
+    <meta property="og:description" content="Dennis Dickson | Frontend Designer and Developer." />
+    <link rel="canonical" href="https://tonye.design/" />
+    <meta property="og:url" content="https://tonye.design/" />
+    <meta property="og:site_name" content="tonye" />
     <script type="application/ld+json">
         {
             "name": "Dennis Dickson | Frontend Designer and Developer.",
@@ -125,7 +125,7 @@
                     </a>
                 </li>
             </ul>
-            <p class="p-1 co-richblack">
+            <p class="px-1 pb-1 co-richblack">
                 This website was built with <a href="http://gatsbyjs.org" class="co-primary fw-bold">Gatsby.js</a> and is currently hosted on <a href="http://netlify.com" class="co-primary fw-bold">Netlify</a>. The source code and other assets can be found on <a href="http://github.com" class="co-primary fw-bold">Github</a>.
             </p>
         </div>
