modified the about page and navigation

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 <nav class="d-flx j-c-sb flex-dir-col al-i-c">
                     <ul class="none d-flx j-c-c flex-dir-col h-100 al-i-c topmenu">
                         <li class="my-h w-100">
-                            <a class="tx-c d-blk p-1 py-2h co-white">
+                            <a class="tx-c d-blk p-1 py-2h active co-white">
                                  Home
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a class="tx-c d-blk p-1 py-2h co-white">
+                            <a href="about.html" class="tx-c d-blk p-1 py-2h co-white">
                                 About
                             </a>
                         </li>
@@ -78,7 +78,7 @@
         <div class="d-flx j-c-sb al-i-c wrapper-x py-1">
 
             <div class="logo-area">
-                <p class="">
+                <p class="text-dance">
                     Tonye Dickson
                 </p>
             </div>
@@ -94,41 +94,41 @@
         </div>
     </header>
 
-
     <div class="mobile-nav wrapper-x pos-a fixed-to-top min-height-60-vh">
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
-               <li class="prefix px-1 sublist-class">
-                    <a class="d-blk py-1 co-richblack">
+               <li>
+                    <a class="d-blk p-1 co-richblack">
                         Home
                     </a>
                 </li>
-                <li class="prefix px-1 sublist-class">
-                    <a href="wallets.html" class="d-blk py-1 co-richblack">
+                <li>
+                    <a href="about.html" class="d-blk p-1 co-richblack">
                         About
                     </a>
                 </li>
-                <li class="prefix px-1 sublist-class">
-                    <a href="transactions.html" class="d-blk py-1 co-richblack">
+                <li>
+                    <a href="work.html" class="d-blk p-1 co-richblack">
                         Work
                     </a>
                 </li>
-                <li class="prefix px-1">
-                    <a href="top-up.html" class="d-blk py-1 co-richblack">
+                <li>
+                    <a href="writing.html" class="d-blk p-1 co-richblack">
                         Writing
                     </a>
                 </li>
-                <li class="prefix px-1">
-                    <a href="withdrawals.html" class="d-blk py-1 co-richblack">
+                <li>
+                    <a href="contact.html" class="d-blk p-1 co-richblack">
                         Contact
                     </a>
                 </li>
             </ul>
-            <p class="px-1 pb-1 co-richblack">
+            <p class="px-1 pb-1 co-richblack hometext">
                 This website was built with <a href="http://gatsbyjs.org" class="co-primary fw-bold">Gatsby.js</a> and is currently hosted on <a href="http://netlify.com" class="co-primary fw-bold">Netlify</a>. The source code and other assets can be found on <a href="http://github.com" class="co-primary fw-bold">Github</a>.
             </p>
         </div>
     </div>
+
 
 
     <main navcontrol>
