modified the about page and navigation

--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
             <p class="px-1 pb-1 co-richblack hometext">
                 This website was built with <a href="http://gatsbyjs.org" class="co-primary fw-bold">Gatsby.js</a> and is currently hosted on <a href="http://netlify.com" class="co-primary fw-bold">Netlify</a>. The source code and other assets can be found on <a href="http://github.com" class="co-primary fw-bold">Github</a>.
             </p>
+            <p class="tx-c co-richblack hometext">
+                Copyright &copy; 2019. Copyright Dennis Dickson. All Rights Reserved.
+            </p>
         </div>
     </div>
 
