modified the about page

--- a/about.html
+++ b/about.html
@@ -77,10 +77,18 @@
 
         <div class="d-flx j-c-sb al-i-c wrapper-x py-1">
 
-            <div class="logo-area">
-                <p class="text-dance">
-                    Tonye Dickson
-                </p>
+            <div class="logo-area d-flx al-i-c">
+                <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
+                    <div class="back-svg pos-a">
+                        <svg width="50" height="50" viewBox="0 0 60 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M53.8094 13.2771C59.433 21.3321 61.6335 31.1258 58.6995 38.067C55.7654 45.0082 47.7104 49.0833 40.3074 51.4875C32.9043 53.9054 26.1397 54.6389 18.2477 52.7508C10.3557 50.8627 1.33619 46.3394 0.140843 40.2811C-1.05451 34.2229 5.57426 26.6025 11.8634 18.398C18.1526 10.1936 24.1022 1.40504 31.6139 0.155356C39.112 -1.08075 48.1722 5.22201 53.8094 13.2771Z" fill="#F78DA7"/>
+                        </svg> 
+                    </div>
+                    <img src="img/small-pic.png" class="small-avatar z-depth-2" alt="">
+                </div>
+                <h5 class="m-0">
+                    ABOUT
+                </h5>
             </div>
             <div class="nav-menu pos-r flex-hide-mediumup" onclick="showmenu(this)">
                 <div class="bar1"></div>
@@ -94,7 +102,7 @@
         </div>
     </header>
 
-    
+
     <div class="mobile-nav wrapper-x pos-a fixed-to-top min-height-60-vh">
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
@@ -137,7 +145,25 @@
 
     <main navcontrol>
         <section class="width-100-pc">
-            <div class="clearfix">
+            <div class="wrapper grid is-multi-col mostly-2">
+                <div class="d-flx flex-dir-col j-c-c al-i-c">
+                    <h1 class="d-ibl bg-branddark co-comp py-h px-5 mb-h">
+                        Designer
+                    </h1>
+                    <h1 class="d-ibl bg-comp co-richblack py-h px-6 mt-0">
+                        Developer
+                    </h1>
+                </div>
+                <div>
+                    
+                </div>
+            </div>
+
+
+
+
+
+            <!-- <div class="clearfix">
                 <div class="right-50 mobile-wrapper-x">
                     <div class="min-height-60-vh h-100 bg-pic">
                         <div class="bg-t-white w-100 h-100 d-flx flex-dir-col j-c-fe">
@@ -201,7 +227,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </section>
     </main>
