--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </div>
 
-        <div class="d-flx j-c-sb al-i-c wrapper-x py-1">
+        <div class="d-flx bg-bg j-c-sb al-i-c fixed-on-mobile fixed-to-top w-100 wrapper-x py-1">
 
             <div class="logo-area">
                 <p class="text-dance">
@@ -94,7 +94,7 @@
         </div>
     </header>
 
-    <div class="mobile-nav wrapper-x pos-a fixed-to-top min-height-60-vh">
+    <div class="mobile-nav wrapper-x pos-f fixed-to-top min-height-60-vh">
         <div class="h-100 bg-white">
             <ul class="sub-ul none tx-c">
                <li>
