modified the about page

--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
     <main navcontrol>
         <section class="width-100-pc">
             <div class="wrapper grid-2 maxwidth-sl mx-auto">
-                <div class="d-flx flex-dir-col j-c-c al-i-c pos-r mb-2">
+                <div class="d-flx flex-dir-col j-c-c al-i-c pos-r mb-2 min-h-180">
                     <div class="absolute-middle">
                             <h1 class="d-ibl bg-branddark bigtext1 co-comp py-h px-5 mb-hh">
                                 Designer
