--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a class="tx-c d-blk p-1 py-2h co-white">
+                            <a href="contact.html" class="tx-c d-blk p-1 py-2h co-white">
                                 Contact
                             </a>
                         </li>
