--- a/about.html
+++ b/about.html
@@ -143,9 +143,9 @@
 
 
     <main navcontrol>
-        <section class="width-100-pc">
+        <section class="width-100-pc hide-flow-x">
             <div class="wrapper grid-2 maxwidth-sl mx-auto">
-                <div class="d-flx flex-dir-col j-c-c al-i-c pos-r mb-2 min-h-80">
+                <div class="p-1 d-flx flex-dir-col j-c-c al-i-c pos-r mb-2 min-h-80">
                     <div class="absolute-middle">
                             <h1 class="d-ibl bg-branddark bigtext1 co-comp py-h px-5 mb-hh">
                                 Designer
