added writing page

--- a/writing.html
+++ b/writing.html
@@ -15,7 +15,7 @@
 
     <link href="css/style.css" rel="stylesheet" />
 
-    <title>Contact | Dennis Dickson | Frontend Designer and Developer.</title>
+    <title>Writing | Dennis Dickson | Frontend Designer and Developer.</title>
     <meta property="og:title" content="Dennis Dickson" />
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="Dennis Dickson | Frontend Designer and Developer.." />
@@ -51,7 +51,7 @@
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a href="about.html" class="tx-c d-blk p-1 py-2h co-white">
+                            <a href="about" class="tx-c d-blk p-1 active py-2h co-white">
                                 About
                             </a>
                         </li>
@@ -61,12 +61,12 @@
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a href="writing" class="tx-c d-blk p-1 py-2h co-white">
+                            <a class="tx-c d-blk p-1 py-2h co-white">
                                 Writing
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a class="active tx-c d-blk p-1 py-2h co-white">
+                            <a href="contact.html" class="tx-c d-blk p-1 py-2h co-white">
                                 Contact
                             </a>
                         </li>
@@ -79,14 +79,14 @@
             <div class="logo-area d-flx al-i-c">
                 <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
                     <div class="back-svg pos-a">
-                            <svg width="50" height="50" viewBox="0 0 60 59" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M54.7957 2.579C61.3515 7.55528 61.4194 20.9216 56.6469 29.7193C51.8914 38.5339 42.2955 42.7969 32.3939 48.2827C22.4753 53.7854 12.268 60.5111 6.98601 57.6917C1.70402 54.8894 1.38132 42.5251 0.684985 32.3008C0.00562906 22.0935 -1.03039 14.0092 2.50226 9.72922C6.03491 5.43229 14.1362 4.93976 24.7002 2.96963C35.2472 1.01648 48.2569 -2.39728 54.7957 2.579Z" fill="#C359FF"/>
-                            </svg>                                
+                        <svg width="50" height="50" viewBox="0 0 60 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M53.8094 13.2771C59.433 21.3321 61.6335 31.1258 58.6995 38.067C55.7654 45.0082 47.7104 49.0833 40.3074 51.4875C32.9043 53.9054 26.1397 54.6389 18.2477 52.7508C10.3557 50.8627 1.33619 46.3394 0.140843 40.2811C-1.05451 34.2229 5.57426 26.6025 11.8634 18.398C18.1526 10.1936 24.1022 1.40504 31.6139 0.155356C39.112 -1.08075 48.1722 5.22201 53.8094 13.2771Z" fill="#F78DA7"/>
+                        </svg> 
                     </div>
                     <img src="img/small-pic.png" class="small-avatar z-depth-2" alt="">
                 </div>
                 <h5 class="m-0">
-                    CONTACT
+                    ABOUT
                 </h5>
             </div>
             <div class="nav-menu pos-r flex-hide-mediumup" onclick="showmenu(this)">
@@ -111,7 +111,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="about.html" class="d-blk p-1 co-richblack">
+                    <a class="d-blk p-1 co-richblack">
                         About
                     </a>
                 </li>
@@ -143,12 +143,44 @@
 
 
     <main navcontrol>
-        <section class="width-100-pc">
-            <div class="wrapper maxwidth-tb mx-auto min-height-60-vh d-flx flex-dir-col j-c-c">
-                <p class="co-richblack tx-c">
-                    I’ll love to have a conversation with you. I’m somewhere on the web doing something right now. I’m either working with a repository on <a href="http://github.com/psybuglite" class="fw-bold co-primary">Github</a>, replying a tweet on <a href="http://twitter.com/psybugite" class="fw-bold co-primary">Twitter</a>,  or  You can find me quickly or see what I’m up to if you click one of of the links below. If you want to send me an email at <a href="mailto:itztonye@gmail.com" class="fw-bold co-primary">itztonye@gmail.com</a>
-                </p>
+        <section class="width-100-pc hide-flow-x">
+            <div class="wrapper grid-2 maxwidth-sl mx-auto">
+                <div class="p-1 d-flx flex-dir-col j-c-c al-i-c pos-r mb-2 min-h-80">
+                    <div class="absolute-middle">
+                            <h1 class="d-ibl bg-branddark bigtext1 co-comp py-h px-5 mb-hh">
+                                Designer
+                            </h1>
+                            <h1 class="d-ibl bg-comp co-richblack bigtext2 py-h px-6 mt-0">
+                                Developer
+                            </h1>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="mb-h">Core</h3>
+                    <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
+                    <h3 class="mb-h">Design</h3>
+                    <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
+                    <h3 class="mb-h">Development</h3>
+                    <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
+                
+                </div>
             </div>
+
+            <div class="clearfix maxwidth-sl mx-auto">
+                <div class="right-20 wrapper">
+                    <img src="img/pic.jpg" class="w-100 about-height" alt="">
+                </div>
+                <div class="left-80 wrapper">
+                    <p>
+                        Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Locatus naturalem dicturum sermone ac maluisti dolemus disciplina utinam evertunt potiendi conquirendae Euripidis distinguantur. Inermis fuit legendus constringendos legantur familiari firmitatem timiditatem sedentis malivoli deorsus atomus convincere Qui ruinae sapientiam, Discordiae adiungimus gloriae illum eisque assidua infimum postulet doctrinis adest stulti invidus patiatur appellant conciliant putamus, Plus angore concursio mollis ei iudiciorumque atomis Stoicis nullo sua culpa derigatur cogitavisse studiis dicebas divitias molestiae  deserunt at.
+                    </p>
+                    <p>
+                        Videatur vias de occulte levis illud quasi conciliant perturbari benivolentiam praetermittenda damna reprehensiones solent sapientiamque omnem . Eligendi nullae intus existimare scribimus dicemus gravis Romanum secutus ultimum. Terminari Octavio ipsis male interdictum ab incurrunt intemperantes certa Graeci Neque tradidisse molestiam accedere praesidium M'.que superstitio beate obiecta dici; Flagitem Platonem si nisi voluptatibus ipsa dixi solum fingi adduci seditiones illam earumque efficiantur atomorum! Inveneris faciant elaborare nos maerores sapientiam parvos mollitia, Loqueretur acute convenire confidam dissidens dolore laus Polyaeno stultus Latinam effecerit fruuntur: Declinatio Torquatis stulti perpauca explentur accurate admirer certa utinam plerumque levius solida infinitum splendido quieti.
+                    </p>
+
+                </div>
+            </div>
+
         </section>
     </main>
 
