modified the writing page

--- a/about.html
+++ b/about.html
@@ -56,12 +56,12 @@
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a href="work" class="tx-c d-blk p-1 py-2h co-white">
+                            <a href="work.html" class="tx-c d-blk p-1 py-2h co-white">
                                 Work
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a href="writing" class="tx-c d-blk p-1 py-2h co-white">
+                            <a href="writing.html" class="tx-c d-blk p-1 py-2h co-white">
                                 Writing
                             </a>
                         </li>
