--- a/writing.html
+++ b/writing.html
@@ -51,17 +51,17 @@
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a href="about" class="tx-c d-blk p-1 active py-2h co-white">
+                            <a href="about.html" class="tx-c d-blk p-1 py-2h co-white">
                                 About
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a href="work" class="tx-c d-blk p-1 py-2h co-white">
+                            <a href="work.html" class="tx-c d-blk p-1 py-2h co-white">
                                 Work
                             </a>
                         </li>
                         <li class="my-h w-100">
-                            <a class="tx-c d-blk p-1 py-2h co-white">
+                            <a class="active tx-c d-blk p-1 py-2h co-white">
                                 Writing
                             </a>
                         </li>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="d-flx j-c-sb fixed-on-mobile bg-bg fixed-to-top w-100 al-i-c wrapper-x py-1">
-            <div class="logo-area d-flx al-i-c">
+            <div class="logo-area bg-bg d-flx al-i-c">
                 <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
                     <div class="back-svg pos-a">
                         <svg width="50" height="50" viewBox="0 0 60 54" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -86,7 +86,7 @@
                     <img src="img/small-pic.png" class="small-avatar z-depth-2" alt="">
                 </div>
                 <h5 class="m-0">
-                    ABOUT
+                    WRITING
                 </h5>
             </div>
             <div class="nav-menu pos-r flex-hide-mediumup" onclick="showmenu(this)">
@@ -143,41 +143,148 @@
 
 
     <main navcontrol>
-        <section class="width-100-pc hide-flow-x">
-            <div class="wrapper grid-2 maxwidth-sl mx-auto">
-                <div class="p-1 d-flx flex-dir-col j-c-c al-i-c pos-r mb-2 min-h-80">
-                    <div class="absolute-middle">
-                            <h1 class="d-ibl bg-branddark bigtext1 co-comp py-h px-5 mb-hh">
-                                Designer
-                            </h1>
-                            <h1 class="d-ibl bg-comp co-richblack bigtext2 py-h px-6 mt-0">
-                                Developer
-                            </h1>
-                    </div>
-                </div>
-                <div>
-                    <h3 class="mb-h">Core</h3>
-                    <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
-                    <h3 class="mb-h">Design</h3>
-                    <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
-                    <h3 class="mb-h">Development</h3>
-                    <p>Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Artifex gravitate inliberali denique Albucius iudicium exultat proprius:</p>
-                
-                </div>
-            </div>
-
+        <section class="width-100-pc hide-flow-x writing-m-top">
             <div class="clearfix maxwidth-sl mx-auto">
-                <div class="right-20 wrapper">
-                    <img src="img/pic.jpg" class="w-100 about-height" alt="">
-                </div>
                 <div class="left-80 wrapper">
-                    <p>
-                        Artifex gravitate inliberali denique Albucius iudicium exultat proprius: Locatus naturalem dicturum sermone ac maluisti dolemus disciplina utinam evertunt potiendi conquirendae Euripidis distinguantur. Inermis fuit legendus constringendos legantur familiari firmitatem timiditatem sedentis malivoli deorsus atomus convincere Qui ruinae sapientiam, Discordiae adiungimus gloriae illum eisque assidua infimum postulet doctrinis adest stulti invidus patiatur appellant conciliant putamus, Plus angore concursio mollis ei iudiciorumque atomis Stoicis nullo sua culpa derigatur cogitavisse studiis dicebas divitias molestiae  deserunt at.
-                    </p>
-                    <p>
-                        Videatur vias de occulte levis illud quasi conciliant perturbari benivolentiam praetermittenda damna reprehensiones solent sapientiamque omnem . Eligendi nullae intus existimare scribimus dicemus gravis Romanum secutus ultimum. Terminari Octavio ipsis male interdictum ab incurrunt intemperantes certa Graeci Neque tradidisse molestiam accedere praesidium M'.que superstitio beate obiecta dici; Flagitem Platonem si nisi voluptatibus ipsa dixi solum fingi adduci seditiones illam earumque efficiantur atomorum! Inveneris faciant elaborare nos maerores sapientiam parvos mollitia, Loqueretur acute convenire confidam dissidens dolore laus Polyaeno stultus Latinam effecerit fruuntur: Declinatio Torquatis stulti perpauca explentur accurate admirer certa utinam plerumque levius solida infinitum splendido quieti.
-                    </p>
-
+                    <ul class="none">
+                        <li class="borderline-bottom py-1">
+                            <span class="co-primary fw-bold">2nd July, 2019</span>
+                            <h3 class="m-0">
+                                <a href="" class="my-h d-blk co-richblack">
+                                    CSS Animations: Understanding Keyframes.
+                                </a>
+                            </h3>
+                            <span class="fw-bold">
+                               <a href="" class="co-primary prefix is-wider">#CSS</a>
+                               <a href="" class="co-primary prefix is-wider">#Animations</a>
+                            </span>
+                        </li>
+                        <li class="borderline-bottom py-1">
+                            <span class="co-primary fw-bold">23rd June, 2019</span>
+                            <h3 class="m-0">
+                                <a href="" class="my-h d-blk co-richblack">
+                                    Choosing Design Tools.
+                                </a>
+                            </h3>
+                            <span class="fw-bold">
+                               <a href="" class="co-primary prefix is-wider">#Design</a>
+                               <a href="" class="co-primary prefix is-wider">#UI</a>
+                            </span>
+                        </li>
+                        <li class="borderline-bottom py-1">
+                            <span class="co-primary fw-bold">14th May, 2019</span>
+                            <h3 class="m-0">
+                                <a href="" class="my-h d-blk co-richblack">
+                                    Semantic Markup and Why They are Necessary.
+                                </a>
+                            </h3>
+                            <span class="fw-bold">
+                                <a href="" class="co-primary prefix is-wider">#HTML</a>
+                                <a href="" class="co-primary prefix is-wider">#UI</a>
+                            </span>
+                        </li>
+                        <li class="borderline-bottom py-1">
+                            <span class="co-primary fw-bold">1st May, 2019</span>
+                            <h3 class="m-0">
+                                <a href="" class="my-h d-blk co-richblack">
+                                    Motivation for yet another day
+                                </a>
+                            </h3>
+                            <span class="fw-bold">
+                                <a href="" class="co-primary prefix is-wider">#Inspiration</a>
+                                <a href="" class="co-primary prefix is-wider">#UI</a>
+                            </span>
+                        </li>
+                        <li class="borderline-bottom py-1">
+                            <span class="co-primary fw-bold">2nd July, 2019</span>
+                            <h3 class="m-0">
+                                <a href="" class="my-h d-blk co-richblack">
+                                    CSS Animations: Understanding Keyframes.
+                                </a>
+                            </h3>
+                            <span class="fw-bold">
+                               <a href="" class="co-primary prefix is-wider">#CSS</a>
+                               <a href="" class="co-primary prefix is-wider">#Animations</a>
+                            </span>
+                        </li>
+                        <li class="borderline-bottom py-1">
+                            <span class="co-primary fw-bold">23rd June, 2019</span>
+                            <h3 class="m-0">
+                                <a href="" class="my-h d-blk co-richblack">
+                                    Choosing Design Tools.
+                                </a>
+                            </h3>
+                            <span class="fw-bold">
+                               <a href="" class="co-primary prefix is-wider">#Design</a>
+                               <a href="" class="co-primary prefix is-wider">#UI</a>
+                            </span>
+                        </li>
+                        <li class="borderline-bottom py-1">
+                            <span class="co-primary fw-bold">14th May, 2019</span>
+                            <h3 class="m-0">
+                                <a href="" class="my-h d-blk co-richblack">
+                                    Semantic Markup and Why They are Necessary.
+                                </a>
+                            </h3>
+                            <span class="fw-bold">
+                                <a href="" class="co-primary prefix is-wider">#HTML</a>
+                                <a href="" class="co-primary prefix is-wider">#UI</a>
+                            </span>
+                        </li>
+                        <li class="borderline-bottom py-1">
+                            <span class="co-primary fw-bold">1st May, 2019</span>
+                            <h3 class="m-0">
+                                <a href="" class="my-h d-blk co-richblack">
+                                    Motivation for yet another day
+                                </a>
+                            </h3>
+                            <span class="fw-bold">
+                                <a href="" class="co-primary prefix is-wider">#Inspiration</a>
+                                <a href="" class="co-primary prefix is-wider">#UI</a>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right-20 wrapper">
+                    <h3>Popular tags</h3>
+                    <ul class="none fw-bold">
+                        <li>
+                            <a href="" class="d-flx al-i-c co-primary">
+                                <span class="largetext prefix">#</span>
+                                CSS
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="d-flx al-i-c co-primary">
+                                <span class="largetext prefix">#</span>
+                                UX
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="d-flx al-i-c co-primary">
+                                <span class="largetext prefix">#</span>
+                                Animation
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="d-flx al-i-c co-primary">
+                                <span class="largetext prefix">#</span>
+                                JavaScript
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="d-flx al-i-c co-primary">
+                                <span class="largetext prefix">#</span>
+                                Accessibility
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="d-flx al-i-c co-primary">
+                                <span class="largetext prefix">#</span>
+                                Updates
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
