--- a/writing.html
+++ b/writing.html
@@ -146,98 +146,98 @@
         <section class="width-100-pc hide-flow-x writing-m-top">
             <div class="clearfix maxwidth-sl mx-auto">
                 <div class="left-80 wrapper">
-                    <ul class="none">
-                        <li class="borderline-bottom py-1">
-                            <span class="co-primary fw-bold">2nd July, 2019</span>
-                            <h3 class="m-0">
+                    <ul class="none blog-list">
+                        <li class="borderline-bottom p-1">
+                            <span class="co-primary fw-bold picotext">2nd July, 2019</span>
+                            <h4 class="m-0 largetext fw-normal">
                                 <a href="" class="my-h d-blk co-richblack">
                                     CSS Animations: Understanding Keyframes.
                                 </a>
-                            </h3>
+                            </h4>
                             <span class="fw-bold">
                                <a href="" class="co-primary prefix is-wider">#CSS</a>
                                <a href="" class="co-primary prefix is-wider">#Animations</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom py-1">
-                            <span class="co-primary fw-bold">23rd June, 2019</span>
-                            <h3 class="m-0">
+                        <li class="borderline-bottom p-1">
+                            <span class="co-primary fw-bold picotext">23rd June, 2019</span>
+                            <h4 class="m-0 largetext fw-normal">
                                 <a href="" class="my-h d-blk co-richblack">
                                     Choosing Design Tools.
                                 </a>
-                            </h3>
+                            </h4>
                             <span class="fw-bold">
                                <a href="" class="co-primary prefix is-wider">#Design</a>
                                <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom py-1">
-                            <span class="co-primary fw-bold">14th May, 2019</span>
-                            <h3 class="m-0">
+                        <li class="borderline-bottom p-1">
+                            <span class="co-primary fw-bold picotext">14th May, 2019</span>
+                            <h4 class="m-0 largetext fw-normal">
                                 <a href="" class="my-h d-blk co-richblack">
                                     Semantic Markup and Why They are Necessary.
                                 </a>
-                            </h3>
+                            </h4>
                             <span class="fw-bold">
                                 <a href="" class="co-primary prefix is-wider">#HTML</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom py-1">
-                            <span class="co-primary fw-bold">1st May, 2019</span>
-                            <h3 class="m-0">
+                        <li class="borderline-bottom p-1">
+                            <span class="co-primary fw-bold picotext">1st May, 2019</span>
+                            <h4 class="m-0 largetext fw-normal">
                                 <a href="" class="my-h d-blk co-richblack">
                                     Motivation for yet another day
                                 </a>
-                            </h3>
+                            </h4>
                             <span class="fw-bold">
                                 <a href="" class="co-primary prefix is-wider">#Inspiration</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom py-1">
-                            <span class="co-primary fw-bold">2nd July, 2019</span>
-                            <h3 class="m-0">
+                        <li class="borderline-bottom p-1">
+                            <span class="co-primary fw-bold picotext">2nd July, 2019</span>
+                            <h4 class="m-0 largetext fw-normal">
                                 <a href="" class="my-h d-blk co-richblack">
                                     CSS Animations: Understanding Keyframes.
                                 </a>
-                            </h3>
+                            </h4>
                             <span class="fw-bold">
                                <a href="" class="co-primary prefix is-wider">#CSS</a>
                                <a href="" class="co-primary prefix is-wider">#Animations</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom py-1">
-                            <span class="co-primary fw-bold">23rd June, 2019</span>
-                            <h3 class="m-0">
+                        <li class="borderline-bottom p-1">
+                            <span class="co-primary fw-bold picotext">23rd June, 2019</span>
+                            <h4 class="m-0 largetext fw-normal">
                                 <a href="" class="my-h d-blk co-richblack">
                                     Choosing Design Tools.
                                 </a>
-                            </h3>
+                            </h4>
                             <span class="fw-bold">
                                <a href="" class="co-primary prefix is-wider">#Design</a>
                                <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom py-1">
-                            <span class="co-primary fw-bold">14th May, 2019</span>
-                            <h3 class="m-0">
+                        <li class="borderline-bottom p-1">
+                            <span class="co-primary fw-bold picotext">14th May, 2019</span>
+                            <h4 class="m-0 largetext fw-normal">
                                 <a href="" class="my-h d-blk co-richblack">
                                     Semantic Markup and Why They are Necessary.
                                 </a>
-                            </h3>
+                            </h4>
                             <span class="fw-bold">
                                 <a href="" class="co-primary prefix is-wider">#HTML</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
                             </span>
                         </li>
-                        <li class="borderline-bottom py-1">
-                            <span class="co-primary fw-bold">1st May, 2019</span>
-                            <h3 class="m-0">
+                        <li class="borderline-bottom p-1">
+                            <span class="co-primary fw-bold picotext">1st May, 2019</span>
+                            <h4 class="m-0 largetext fw-normal">
                                 <a href="" class="my-h d-blk co-richblack">
                                     Motivation for yet another day
                                 </a>
-                            </h3>
+                            </h4>
                             <span class="fw-bold">
                                 <a href="" class="co-primary prefix is-wider">#Inspiration</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
